# kadium

./: .eslintrc.cjs  .gitignore  CHANGELOG.md  LICENSE  README.md  bindings.ts  package-lock.json  package.json  props_preprocess.js  svelte.config.js  tsconfig.json  updates.json  vite.config.js  vite.config.ts  vite.config.ts.timestamp-1756556462483-a3605446fe15f.mjs
.github/workflows/: publish.yml  release.yml  test.yml
assets/: logo.afdesign
src/: App.svelte  app.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 1_videos.sql
src-tauri/src/: api.rs  background.rs  build.rs  data.rs  db.rs  fetcher_runtime.rs  lib.rs  main.rs  menu.rs  migration.rs  settings.rs  user_data.rs
src/lib/: Button.svelte  ButtonTest.svelte  Channels.svelte  Link.svelte  Modal.svelte  Nav.svelte  Page.svelte  Settings.svelte  Switch.svelte  Tags.svelte  commands.ts  data.ts  external.ts  filters.ts  general.ts
src/lib/modals/: Channel.svelte  GetStarted.svelte  Modal.svelte  Settings.svelte
src/modals/: Channel.svelte  GetStarted.svelte  Settings.svelte
src/routes/: +layout.svelte  +page.svelte  Channels.svelte  Settings.svelte  Videos.svelte  _VideoBar.svelte  menu.ts
src/routes/channels/: +page.svelte
src/routes/history/: +page.svelte
website/: package-lock.json  package.json  postcss.config.cjs  postcss.config.mjs  svelte.config.js  tailwind.config.cjs  tailwind.config.js  tsconfig.json
website/src/: app.html  hooks.js
website/src/routes/: +error.svelte  +layout.svelte  +page.svelte  ButtonPopup.svelte  Download.svelte  Revealed.svelte  __layout.svelte  _download.svelte  changelog.svelte  index.svelte
website/src/routes/changelog/: +page.svelte
website/static/: browserconfig.xml
