[package]
name = "kadium"
version = "1.4.3"
description = "App for YouTube upload notifications"
default-run = "kadium"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["devtools", "dialog-message", "notification-all", "shell-open"] }
rfd = "0.10"
atomicwrites = "0.3"
tokio = { version = "1.12", features = ["macros", "time", "sync"] }
reqwest = { version = "0.11", features = ["json"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite"] }
chrono = "0.4"
iso8601-duration = "0.1"
url = "2.2"
tauri-specta = { git = "https://github.com/oscartbeaumont/tauri-specta", rev = "2aa2a312324343fe1cfc8b2ba9db98ec236b7f09" }
specta = { version = "0.0.6" }
# specta = { version = "0.0.6", features = ["function", "tauri"] }

[patch.crates-io]
specta = { git = "https://github.com/oscartbeaumont/specta", rev = "3d8f2d965077f1a02a58a814cb31cc9e66d558ea" }

[target.'cfg(target_os = "macos")'.dependencies]
macos-app-nap = "0.0"
cocoa = "0.24"
objc = "0.2"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
